--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <audio id="sad" controls>
-<source src="https://math.seattleacademy.org/garyanderson/snd/sad.mp3" type="audio/mpeg">
+<source src="snd/DeathSound.mp3" audio/mpeg">
 Your browser does not support the audio tag
 </audio>
 <h1>Steven's Awesome Math Problems</h1>
