--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,11 +9,11 @@
 <link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 <title>CodePen - AACoding04-6</title>
 <style>
-.correct{
-  background:green;
+body{
+  background:blue;
 }
 
-.incorrect{
+{
   background:red;
 }
 </style>
@@ -24,7 +22,7 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <audio id="sad" controls>
-<source src="snd/DeathSound.mp3" audio/mpeg">
+<source src="snd/DeathSound.mp3" type="audio/mpeg">
 Your browser does not support the audio tag
 </audio>
 <h1>Steven's Awesome Math Problems</h1>
@@ -33,6 +31,12 @@ Your browser does not support the audio tag
 <li>\( 2^3 \) <input data-correct="8" /> </li>
 <li>\( \sqrt[3]{8} \) <input data-correct="2" /></li>
 <li>\( 8^\frac{1}{3} \) <input data-correct="2" /></li>
+<li>\( 4^3 \) <input data-correct="64" /></li>
+<li>\( 4^2 \) <input data-correct="16" /></li>
+<li>\( 24*2 \) <input data-correct="48" /></li>
+<li>\( 3^4 \) <input data-correct="81" /></li>
+<li>\( 91-3 \) <input data-correct="88" /></li>
+<li>\( 4*9 \) <input data-correct="36" /></li>
 <li>\( (\frac{-125}{27})^\tfrac{-2}{3} \) <input data-correct="9/25" /></li>
 </ol>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
