--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@ body{
   background:blue;
 }
 
-{
+.correct{
+  background:green;
+}
+
+.incorrect{
   background:red;
 }
+{
+  background:red;
+}l
 </style>
 </head>
 <body translate="no">
