--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@ body{
 <body translate="no">
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-<audio id="sad" controls>
+<audio id="sad">
 <source src="https://steuen.github.io/AACoding04-6/snd/DeathSound.mp3" type="audio/mpeg">
+Your browser does not support the audio tag
+</audio>
+<audio id="happy">
+<source src="https://steuen.github.io/AACoding04-6/snd/BruhSound.mp3" type="audio/mpeg">
 Your browser does not support the audio tag
 </audio>
 <h1>Steven's Awesome Math Problems</h1>
@@ -51,6 +55,7 @@ Your browser does not support the audio tag
 <script id="rendered-js">
 console.clear();
 const sad = document.getElementById("sad");
+const happy = document.getElementById("happy")
 setInterval(upTime, 1000);
 
 function upTime() {
@@ -70,6 +75,7 @@ function onChange(evt) {
       .addClass("correct");
     let theScore = Number($("#score").text());
     theScore = theScore + 1;
+    happy.play();
     $("#score").text(theScore);
   } else {
     if (Math.random() > 0.1) {
