--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@ Your browser does not support the audio tag
 <h1>Steven's Awesome Math Problems</h1>
 <div>Timer: <span id="theTime">0</span> Score: <span id="score">0</span> Error: <span id="error">0</span></div>
 <ol>
-<li>\( 2^3 \) <input data-correct="8" /> </li>
+<li>\( (\frac{2}{12})^\tfrac{-1}{4} \) <input data-correct="6^1/4" /> </li>
 <li>\( \sqrt[3]{8} \) <input data-correct="2" /></li>
 <li>\( 8^\frac{1}{3} \) <input data-correct="2" /></li>
-<li>\( (\frac{-125}{27}^\tfrac{-2}{3}) \) <input data-correct="9/25" /></li>
+<li>\( (\frac{-125}{27})^\tfrac{-2}{3} \) <input data-correct="9/25" /></li>
 <li>\( 4^2 \) <input data-correct="16" /></li>
 <li>\( 24*2 \) <input data-correct="48" /></li>
-<li>\( 3^4 \) <input data-correct="81" /></li>
+<li>\( 3^4+25 \) <input data-correct="106" /></li>
 <li>\( \sqrt[]{36} \) <input data-correct="6" /></li>
-<li>\( 4*9 \) <input data-correct="36" /></li>
-<li>\( (\frac{-125}{27})^\tfrac{-2}{3} \) <input data-correct="9/25" /></li>
+<li>\( 4^9-19872 \) <input data-correct="242272" /></li>
+<li>\( (\frac{256}{625})^\tfrac{-3}{4} \) <input data-correct="125/64" /></li>
 <div id="myProgress">
 <div id="myBar"></div>
 </div>
